# cerebralstratum-backend

./: .devfile.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api_test.sh  build-images.sh  devfile.yaml  get_bearer_token_test.sh  hack_modules.sh  openapi.json  openapi.yaml  pom.xml  pom.xml.next  pyproject.toml  qodana.yaml  test-requirements.txt  ubi-null.sh
.che/: che-editor.yaml
.github/: dependabot.yaml
.github/workflows/: build-docs.yaml.yml  code-quality.yaml
.junie/: guidelines.md
.quarkus/: config.yaml
.quarkus/cli/plugins/: quarkus-cli-catalog.json
.tekton/: on-push.yaml  pipelinerun.yaml
Writerside/: c.tree  cs-b.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: ADRs.md  Architecture.md  Contributing.md  Overview.md  Road-Map.md  starter-topic.md
Writerside/topics/ADRs/: 0001-iam-and-device-registration-architecture.md  0002-observability-and-fleet-dashboard-embedding.md  0003-loyalty-programme-integration.md
backend/: README.md  pom.xml
cs-api/: pom.xml
db/: changeLog.yaml
device-data-persist/: pom.xml
device-registrar/: README.md  pom.xml
device-simulator/: README.md  pom.xml  start-mqtt.sh  stop-mqtt.sh
flaskr/: __main__.py  main.py
ingress-classifier/: README.md  pom.xml
notification-dispatcher/: README.md  pom.xml
src/: DESCRIPTION  __init__.py  __main__.py  dbapi.py  util.py
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/versions/: v1.py  v2.py
utils/: README.md  pom.xml
(+183 files in other folders)
