[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-api"
dependencies = [
    "flask",
    "Authlib",
    "requests",
    "flask-socketio",
    "simple-websocket",
    "sqlalchemy"
]
dynamic = ["version", "readme", "description"]

[project.scripts]
cs-api = "src.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "src.__init__.VERSION"}
description = {file = "src/DESCRIPTION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["test", "tests.*"]